bin_PROGRAMS = fileb
fileb_CPPFLAGS = -std=c++11 -Wall -Wextra -pedantic $(GTKMM_CFLAGS)
fileb_LDADD = $(GTKMM_LIBS)
fileb_SOURCES = \
	src/Application.cpp \
	src/fs/Directory.cpp \
	src/fs/File.cpp \
	src/fs/FSHandler.cpp \
	src/fs/Path.cpp \
	src/gui/MainWindow.cpp \
	src/gui/Pane.cpp \
	src/gui/View.cpp \
	src/gui/ViewModel.cpp \
	src/gui/gtk/GtkMainWindow.cpp \
	src/gui/gtk/GtkPane.cpp \
	src/gui/gtk/GtkView.cpp